[gd_scene load_steps=17 format=2]

[ext_resource path="res://a.tres" type="MeshLibrary" id=1]
[ext_resource path="res://assets/New folder/maze.png" type="Texture" id=2]
[ext_resource path="res://Label.gd" type="Script" id=3]
[ext_resource path="res://TextureRect.gd" type="Script" id=4]
[ext_resource path="res://BetterPixels.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://LEVEL.gd" type="Script" id=6]
[ext_resource path="res://assets/New folder/hs.png" type="Texture" id=7]
[ext_resource path="res://assets/New folder/race.png" type="Texture" id=8]
[ext_resource path="res://assets/New folder/boss.png" type="Texture" id=9]

[sub_resource type="CubeMesh" id=6]

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.0196078, 0.0588235, 1, 1 )

[sub_resource type="BoxShape" id=8]

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="SpatialMaterial" id=10]
albedo_color = Color( 0.776471, 0, 1, 1 )

[sub_resource type="SpatialMaterial" id=11]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=12]
albedo_color = Color( 0.223529, 1, 0.0235294, 1 )

[node name="LEVEL1" type="GridMap"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.11223, 0 )
mesh_library = ExtResource( 1 )
data = {
"cells": PoolIntArray( 0, 0, 1441795, 1, 0, 1048579, 65512, 0, 1441792, 65513, 0, 1441795, 65514, 0, 1441795, 65515, 0, 1441792, 65516, 0, 1441792, 65517, 0, 1048579, 65518, 0, 1048579, 65519, 0, 1048579, 65520, 0, 1048579, 65521, 0, 1048579, 65522, 0, 1048579, 65523, 0, 655363, 65524, 0, 655363, 65525, 0, 1441795, 65526, 0, 1441795, 65527, 0, 1441795, 65528, 0, 4, 65529, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 1441796, 65534, 0, 1441795, 65535, 0, 1441795, 0, 1, 1441795, 1, 1, 1441792, 65512, 1, 1441792, 65513, 1, 1441795, 65514, 1, 1441795, 65515, 1, 1441792, 65516, 1, 1441792, 65517, 1, 1048579, 65518, 1, 1048579, 65519, 1, 1048579, 65520, 1, 1048579, 65521, 1, 1048579, 65522, 1, 1048579, 65523, 1, 655363, 65524, 1, 655363, 65525, 1, 1441795, 65526, 1, 1441795, 65527, 1, 1441795, 65528, 1, 1048576, 65533, 1, 1441792, 65534, 1, 1441795, 65535, 1, 1441795, 0, 2, 1441795, 1, 2, 1441792, 65512, 2, 1441792, 65513, 2, 1048579, 65514, 2, 1441795, 65515, 2, 1441792, 65516, 2, 1441792, 65517, 2, 1048579, 65518, 2, 1048579, 65519, 2, 1048579, 65520, 2, 1048579, 65521, 2, 1048579, 65522, 2, 655363, 65523, 2, 655363, 65524, 2, 655363, 65525, 2, 1441795, 65526, 2, 1441795, 65527, 2, 1441795, 65528, 2, 1048580, 65529, 2, 655360, 65530, 2, 655360, 65531, 2, 655360, 65532, 2, 655360, 65533, 2, 655364, 65534, 2, 1441795, 65535, 2, 1441795, 0, 3, 1441795, 1, 3, 1441792, 65512, 3, 1441792, 65513, 3, 1441795, 65514, 3, 1441795, 65515, 3, 1441792, 65516, 3, 1441792, 65517, 3, 1048579, 65518, 3, 1048579, 65519, 3, 1048579, 65520, 3, 1048579, 65521, 3, 1048579, 65522, 3, 1048579, 65523, 3, 4, 65524, 3, 1441796, 65525, 3, 1441795, 65526, 3, 1441795, 65527, 3, 1441795, 65528, 3, 1441795, 65529, 3, 1441795, 65530, 3, 1441795, 65531, 3, 1441795, 65532, 3, 1441795, 65533, 3, 1441795, 65534, 3, 1441795, 65535, 3, 1441795, 0, 4, 1441795, 1, 4, 1441792, 65512, 4, 1441792, 65513, 4, 1441795, 65514, 4, 1441795, 65515, 4, 1048580, 65516, 4, 655364, 65517, 4, 1048579, 65518, 4, 1048579, 65519, 4, 1048579, 65520, 4, 1048579, 65521, 4, 1048579, 65522, 4, 1048579, 65523, 4, 1048576, 65524, 4, 1441792, 65525, 4, 1441795, 65526, 4, 1441795, 65527, 4, 1441795, 65528, 4, 1441795, 65529, 4, 1441795, 65530, 4, 1441795, 65531, 4, 1441795, 65532, 4, 1441795, 65533, 4, 1441795, 65534, 4, 1441795, 65535, 4, 1441795, 0, 5, 0, 1, 5, 655364, 65512, 5, 1441792, 65513, 5, 1048579, 65514, 5, 1048579, 65515, 5, 1048579, 65516, 5, 1048579, 65517, 5, 1048579, 65518, 5, 1048579, 65519, 5, 1048579, 65520, 5, 1048579, 65521, 5, 1048579, 65522, 5, 1048579, 65523, 5, 1048576, 65524, 5, 1048580, 65525, 5, 0, 65526, 5, 0, 65527, 5, 0, 65528, 5, 0, 65529, 5, 0, 65530, 5, 1441796, 65531, 5, 1048579, 65532, 5, 1048579, 65533, 5, 1048579, 65534, 5, 1048579, 65535, 5, 4, 65512, 6, 1441792, 65513, 6, 1048579, 65514, 6, 1048579, 65515, 6, 1048579, 65516, 6, 1048579, 65517, 6, 1048579, 65518, 6, 1048579, 65519, 6, 1048579, 65520, 6, 1048579, 65521, 6, 1048579, 65522, 6, 1048579, 65523, 6, 1048576, 65530, 6, 1441792, 65531, 6, 1441795, 65532, 6, 1441795, 65533, 6, 1441795, 65534, 6, 1441795, 65535, 6, 1048576, 0, 7, 655360, 1, 7, 655360, 2, 7, 1441796, 65512, 7, 1441792, 65513, 7, 1048579, 65514, 7, 1048579, 65515, 7, 1048579, 65516, 7, 1048579, 65517, 7, 1048579, 65518, 7, 1048579, 65519, 7, 1048579, 65520, 7, 1048579, 65521, 7, 1048579, 65522, 7, 1048579, 65523, 7, 1048576, 65527, 7, 4, 65528, 7, 0, 65529, 7, 0, 65530, 7, 655364, 65531, 7, 1441795, 65532, 7, 1441795, 65533, 7, 1441795, 65534, 7, 1441795, 65535, 7, 1048580, 0, 8, 1441795, 1, 8, 1441795, 2, 8, 1048576, 65512, 8, 1441792, 65513, 8, 1048579, 65514, 8, 1048579, 65515, 8, 4, 65516, 8, 1441796, 65517, 8, 1048579, 65518, 8, 1048579, 65519, 8, 1048579, 65520, 8, 1048579, 65521, 8, 1048579, 65522, 8, 1048579, 65523, 8, 1048576, 65527, 8, 1441792, 65528, 8, 1441795, 65529, 8, 1441795, 65530, 8, 1441795, 65531, 8, 1441795, 65532, 8, 1441795, 65533, 8, 1441795, 65534, 8, 1441795, 65535, 8, 1441795, 0, 9, 1441795, 1, 9, 1441795, 2, 9, 1048576, 65512, 9, 1441792, 65513, 9, 1048579, 65514, 9, 1048579, 65515, 9, 1441792, 65516, 9, 1441792, 65517, 9, 1048579, 65518, 9, 1048579, 65519, 9, 1048579, 65520, 9, 1048579, 65521, 9, 1048579, 65522, 9, 1048579, 65523, 9, 1048576, 65527, 9, 1441792, 65528, 9, 1441795, 65529, 9, 1441795, 65530, 9, 1441795, 65531, 9, 1441795, 65532, 9, 1441795, 65533, 9, 1441795, 65534, 9, 1441795, 65535, 9, 1441795, 0, 10, 1441795, 1, 10, 1441795, 2, 10, 1048576, 65512, 10, 1441792, 65513, 10, 1048579, 65514, 10, 1048579, 65515, 10, 1441792, 65516, 10, 1441792, 65517, 10, 1048579, 65518, 10, 1048579, 65519, 10, 1048579, 65520, 10, 1048579, 65521, 10, 1048579, 65522, 10, 1048579, 65523, 10, 1048576, 65527, 10, 1441792, 65528, 10, 1441795, 65529, 10, 1441795, 65530, 10, 1441795, 65531, 10, 1441795, 65532, 10, 1441795, 65533, 10, 1441795, 65534, 10, 1441795, 65535, 10, 1441795, 0, 11, 1441795, 1, 11, 1441795, 2, 11, 1048576, 65512, 11, 1441792, 65513, 11, 1048579, 65514, 11, 1048579, 65515, 11, 1441792, 65516, 11, 1048580, 65517, 11, 0, 65518, 11, 1441796, 65519, 11, 1048579, 65520, 11, 1048579, 65521, 11, 1048579, 65522, 11, 4, 65523, 11, 655364, 65527, 11, 1048580, 65528, 11, 655360, 65529, 11, 655360, 65530, 11, 1441796, 65531, 11, 1441795, 65532, 11, 1441795, 65533, 11, 1441795, 65534, 11, 1441795, 65535, 11, 1441795, 0, 12, 1441795, 1, 12, 1441795, 2, 12, 1048576, 65512, 12, 1441792, 65513, 12, 1048579, 65514, 12, 1048579, 65515, 12, 1048580, 65516, 12, 0, 65517, 12, 0, 65518, 12, 655364, 65519, 12, 655363, 65520, 12, 655363, 65521, 12, 655363, 65522, 12, 1048580, 65523, 12, 0, 65524, 12, 0, 65525, 12, 0, 65526, 12, 0, 65527, 12, 655360, 65528, 12, 655360, 65529, 12, 655360, 65530, 12, 655364, 65531, 12, 1441795, 65532, 12, 1441795, 65533, 12, 1441795, 65534, 12, 1441795, 65535, 12, 1441795, 0, 13, 1441795, 1, 13, 1441795, 2, 13, 1048576, 65512, 13, 1441792, 65513, 13, 1048579, 65514, 13, 1048579, 65515, 13, 1048579, 65516, 13, 1048579, 65517, 13, 1048579, 65518, 13, 1048579, 65519, 13, 1048579, 65520, 13, 1048579, 65521, 13, 1048579, 65522, 13, 1048579, 65523, 13, 1048579, 65524, 13, 1048579, 65525, 13, 1441795, 65526, 13, 1441795, 65527, 13, 1441795, 65528, 13, 1441795, 65529, 13, 1441795, 65530, 13, 1441795, 65531, 13, 1441795, 65532, 13, 1441795, 65533, 13, 1441795, 65534, 13, 1441795, 65535, 13, 1441795, 0, 14, 1441795, 1, 14, 1441795, 2, 14, 1048576, 65512, 14, 1441792, 65513, 14, 1048579, 65514, 14, 1048579, 65515, 14, 1048579, 65516, 14, 1048579, 65517, 14, 1048579, 65518, 14, 1048579, 65519, 14, 1048579, 65520, 14, 1048579, 65521, 14, 1048579, 65522, 14, 1048579, 65523, 14, 1048579, 65524, 14, 1048579, 65525, 14, 1048579, 65526, 14, 1441795, 65527, 14, 1441795, 65528, 14, 1441795, 65529, 14, 1441795, 65530, 14, 1441795, 65531, 14, 1441795, 65532, 14, 1441795, 65533, 14, 1441795, 65534, 14, 1441795, 65535, 14, 1441795, 0, 15, 1441795, 1, 15, 1441795, 2, 15, 1048576, 65512, 15, 1048580, 65513, 15, 0, 65514, 15, 0, 65515, 15, 655360, 65516, 15, 655360, 65517, 15, 655360, 65518, 15, 655360, 65519, 15, 655360, 65520, 15, 655360, 65521, 15, 655360, 65522, 15, 655360, 65524, 15, 655360, 65525, 15, 0, 65526, 15, 0, 65527, 15, 0, 65528, 15, 0, 65529, 15, 1441796, 65530, 15, 1441795, 65531, 15, 1441795, 65532, 15, 1441795, 65533, 15, 1441795, 65534, 15, 1441795, 65535, 15, 1441795, 0, 16, 1441795, 1, 16, 1441795, 2, 16, 1048576, 65529, 16, 1048576, 65530, 16, 1441795, 65531, 16, 1441795, 65532, 16, 1441795, 65533, 16, 1441795, 65534, 16, 1441795, 65535, 16, 1441795, 0, 17, 0, 1, 17, 0, 2, 17, 655364, 65529, 17, 1048580, 65530, 17, 0, 65531, 17, 0, 65532, 17, 0, 65533, 17, 0, 65534, 17, 0, 65535, 17, 0, 65512, 65520, 4, 65513, 65520, 655360, 65514, 65520, 655360, 65515, 65520, 655360, 65516, 65520, 655360, 65518, 65520, 655360, 65519, 65520, 655360, 65520, 65520, 655360, 65521, 65520, 1441796, 65512, 65521, 1048576, 65513, 65521, 655363, 65514, 65521, 655363, 65515, 65521, 655363, 65516, 65521, 655363, 65517, 65521, 655363, 65518, 65521, 655363, 65519, 65521, 655363, 65520, 65521, 655363, 65521, 65521, 1441792, 0, 65522, 1441796, 65512, 65522, 1048576, 65513, 65522, 655363, 65514, 65522, 655363, 65515, 65522, 655363, 65516, 65522, 655363, 65517, 65522, 655363, 65518, 65522, 655363, 65519, 65522, 655363, 65520, 65522, 655363, 65521, 65522, 1441792, 65528, 65522, 4, 65529, 65522, 0, 65530, 65522, 0, 65531, 65522, 0, 65532, 65522, 0, 65533, 65522, 0, 65534, 65522, 0, 65535, 65522, 0, 0, 65523, 1441792, 65512, 65523, 1048576, 65513, 65523, 655363, 65514, 65523, 655363, 65515, 65523, 655363, 65516, 65523, 655363, 65517, 65523, 655363, 65518, 65523, 655363, 65519, 65523, 655363, 65520, 65523, 655363, 65521, 65523, 1441792, 65528, 65523, 1441792, 65529, 65523, 655363, 65530, 65523, 655363, 65531, 65523, 655363, 65532, 65523, 655363, 65533, 65523, 655363, 65534, 65523, 655363, 65535, 65523, 655363, 0, 65524, 1441792, 65512, 65524, 1048576, 65513, 65524, 655363, 65514, 65524, 655363, 65515, 65524, 655363, 65516, 65524, 655363, 65517, 65524, 655363, 65518, 65524, 655363, 65519, 65524, 655363, 65520, 65524, 655363, 65521, 65524, 1441792, 65528, 65524, 1441792, 65529, 65524, 655363, 65530, 65524, 655363, 65531, 65524, 655363, 65532, 65524, 655363, 65533, 65524, 655363, 65534, 65524, 655363, 65535, 65524, 655363, 0, 65525, 1441792, 65512, 65525, 1048576, 65513, 65525, 655363, 65514, 65525, 655363, 65515, 65525, 4, 65516, 65525, 655360, 65517, 65525, 655360, 65518, 65525, 1441796, 65519, 65525, 655363, 65520, 65525, 655363, 65521, 65525, 1048580, 65522, 65525, 0, 65523, 65525, 0, 65524, 65525, 0, 65525, 65525, 0, 65526, 65525, 0, 65527, 65525, 0, 65528, 65525, 655364, 65529, 65525, 655363, 65530, 65525, 655363, 65531, 65525, 655363, 65532, 65525, 655363, 65533, 65525, 655363, 65534, 65525, 655363, 65535, 65525, 655363, 0, 65526, 1441792, 65512, 65526, 1048576, 65513, 65526, 655363, 65514, 65526, 655363, 65515, 65526, 1441792, 65518, 65526, 1048576, 65519, 65526, 655363, 65520, 65526, 655363, 65521, 65526, 655363, 65522, 65526, 655363, 65523, 65526, 655363, 65524, 65526, 655363, 65525, 65526, 655363, 65526, 65526, 655363, 65527, 65526, 655363, 65528, 65526, 655363, 65529, 65526, 655363, 65530, 65526, 655363, 65531, 65526, 655363, 65532, 65526, 655363, 65533, 65526, 655363, 65534, 65526, 655363, 65535, 65526, 655363, 0, 65527, 1441792, 65512, 65527, 1441792, 65513, 65527, 1441795, 65514, 65527, 1441795, 65515, 65527, 1441792, 65518, 65527, 1048576, 65519, 65527, 655363, 65520, 65527, 655363, 65521, 65527, 655363, 65522, 65527, 655363, 65523, 65527, 655363, 65524, 65527, 655363, 65525, 65527, 655363, 65526, 65527, 655363, 65527, 65527, 655363, 65528, 65527, 655363, 65529, 65527, 655363, 65530, 65527, 655363, 65531, 65527, 655363, 65532, 65527, 655363, 65533, 65527, 655363, 65534, 65527, 655363, 65535, 65527, 655363, 0, 65528, 1441792, 65512, 65528, 1441792, 65513, 65528, 1441795, 65514, 65528, 1441795, 65515, 65528, 1441792, 65518, 65528, 1048580, 65519, 65528, 0, 65520, 65528, 0, 65521, 65528, 0, 65522, 65528, 0, 65523, 65528, 0, 65524, 65528, 0, 65525, 65528, 0, 65526, 65528, 0, 65527, 65528, 0, 65528, 65528, 1441796, 65529, 65528, 655363, 65530, 65528, 655363, 65531, 65528, 655363, 65532, 65528, 655363, 65533, 65528, 655363, 65534, 65528, 655363, 65535, 65528, 655363, 0, 65529, 1441792, 65512, 65529, 1441792, 65513, 65529, 1441795, 65514, 65529, 1441795, 65515, 65529, 1441792, 65528, 65529, 1048576, 65529, 65529, 655363, 65530, 65529, 655363, 65531, 65529, 655363, 65532, 65529, 655363, 65533, 65529, 655363, 65534, 65529, 655363, 65535, 65529, 655363, 0, 65530, 655364, 65512, 65530, 1441792, 65513, 65530, 1441795, 65514, 65530, 1441795, 65515, 65530, 1441792, 65528, 65530, 1048580, 65529, 65530, 0, 65530, 65530, 1441796, 65531, 65530, 655363, 65532, 65530, 655363, 65533, 65530, 4, 65534, 65530, 655360, 65535, 65530, 655360, 65512, 65531, 1441792, 65513, 65531, 1441795, 65514, 65531, 1441795, 65515, 65531, 1441792, 65516, 65531, 4, 65517, 65531, 0, 65518, 65531, 0, 65519, 65531, 0, 65520, 65531, 0, 65521, 65531, 0, 65522, 65531, 0, 65523, 65531, 1441796, 65530, 65531, 1048576, 65531, 65531, 3, 65532, 65531, 3, 65533, 65531, 1048576, 65513, 65532, 1441795, 65514, 65532, 1441795, 65515, 65532, 1048580, 65516, 65532, 655364, 65517, 65532, 1441795, 65518, 65532, 1441795, 65519, 65532, 1441795, 65520, 65532, 1441795, 65521, 65532, 1441795, 65522, 65532, 1441795, 65523, 65532, 1441792, 65530, 65532, 1048576, 65531, 65532, 3, 65532, 65532, 3, 65533, 65532, 1048576, 0, 65533, 0, 1, 65533, 1441796, 65512, 65533, 1441792, 65513, 65533, 1441795, 65514, 65533, 1441795, 65515, 65533, 1441795, 65516, 65533, 1441795, 65517, 65533, 1441795, 65518, 65533, 1441795, 65519, 65533, 1441795, 65520, 65533, 1441795, 65521, 65533, 1441795, 65522, 65533, 1441795, 65523, 65533, 1441792, 65524, 65533, 4, 65525, 65533, 0, 65526, 65533, 0, 65527, 65533, 0, 65528, 65533, 0, 65529, 65533, 0, 65530, 65533, 655364, 65531, 65533, 3, 65532, 65533, 3, 65533, 65533, 1048580, 65534, 65533, 0, 65535, 65533, 0, 0, 65534, 1441795, 1, 65534, 1441792, 65512, 65534, 1441792, 65513, 65534, 1441795, 65514, 65534, 1441795, 65515, 65534, 1441795, 65516, 65534, 1441795, 65517, 65534, 1441795, 65518, 65534, 1441795, 65519, 65534, 1441795, 65520, 65534, 1441795, 65521, 65534, 1441795, 65522, 65534, 1441795, 65523, 65534, 1441792, 65524, 65534, 1441792, 65525, 65534, 1441795, 65526, 65534, 1441795, 65527, 65534, 1441795, 65528, 65534, 1441795, 65529, 65534, 1441795, 65530, 65534, 1441795, 65531, 65534, 1441795, 65532, 65534, 1441795, 65533, 65534, 1441795, 65534, 65534, 1441795, 65535, 65534, 1441795, 0, 65535, 1441795, 1, 65535, 1441792, 65512, 65535, 1441792, 65513, 65535, 1441795, 65514, 65535, 1441795, 65515, 65535, 4, 65516, 65535, 1441796, 65517, 65535, 1441795, 65518, 65535, 1441795, 65519, 65535, 1441795, 65520, 65535, 1441795, 65521, 65535, 1441795, 65522, 65535, 1048579, 65523, 65535, 1048580, 65524, 65535, 655364, 65525, 65535, 1441795, 65526, 65535, 1441795, 65527, 65535, 1441795, 65528, 65535, 1441795, 65529, 65535, 1441795, 65530, 65535, 1441795, 65531, 65535, 1441795, 65532, 65535, 1441795, 65533, 65535, 1441795, 65534, 65535, 1441795, 65535, 65535, 1441795 )
}
script = ExtResource( 6 )
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="Spatial" type="Spatial" parent="."]

[node name="Game1" type="Sprite3D" parent="Spatial"]
transform = Transform( 1.31829, 0, 0, 0, 1.96901, 0, 0, 0, 1.31829, 2.74846, 2.86659, 6.21335 )
flip_h = true
axis = 0
texture = ExtResource( 2 )

[node name="Game2" type="Sprite3D" parent="Spatial"]
transform = Transform( 1.91716, 0, 0, 0, 1.91716, 0, 0, 0, 1.91716, -46.6434, 2.74565, -1.42476 )
axis = 0
texture = ExtResource( 7 )

[node name="Game3" type="Sprite3D" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -38.7175, 2.71914, -30.7496 )
texture = ExtResource( 8 )

[node name="Game4" type="Sprite3D" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -29.88, 3.0444, 30.6673 )
flip_h = true
texture = ExtResource( 9 )

[node name="Maze_Game" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1.94192, 0, 0, 0, 1, 2.98435, 3.06218, 1.01049 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="Area" type="Area" parent="Maze_Game"]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 1, -0.932195, -0.0379157, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Maze_Game/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.10375e-08, 0 )
shape = SubResource( 8 )

[node name="TextureRect" type="TextureRect" parent="Maze_Game"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Maze_Game/TextureRect"]
visible = false
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 9 )
text = "Start Maze Game"
script = ExtResource( 3 )

[node name="Race" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 3.77105, 0, 0, 0, 1, -47.0336, 1.45951, -6.96492 )
mesh = SubResource( 6 )
material/0 = SubResource( 10 )

[node name="Area" type="Area" parent="Race"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0379157, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Race/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.10375e-08, 0 )
shape = SubResource( 8 )

[node name="TextureRect" type="TextureRect" parent="Race"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Race/TextureRect"]
visible = false
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 9 )
text = "Start Race"
script = ExtResource( 3 )

[node name="FinalGame" type="MeshInstance" parent="."]
transform = Transform( 2.15271, 0, 0, 0, 2.50999, 0, 0, 0, 1, -24.4129, 1.97115, 30.8173 )
mesh = SubResource( 6 )
material/0 = SubResource( 11 )

[node name="Area" type="Area" parent="FinalGame"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0379157, 0 )

[node name="CollisionShape" type="CollisionShape" parent="FinalGame/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0662537, 1.77515e-08, 0 )
shape = SubResource( 8 )

[node name="TextureRect" type="TextureRect" parent="FinalGame"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="FinalGame/TextureRect"]
visible = false
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 9 )
text = "Start Final Game"
script = ExtResource( 3 )

[node name="Hide_Seek" type="MeshInstance" parent="."]
transform = Transform( 1.46721, 0, 0, 0, 3.77105, 0, 0, 0, 1, -37.1686, 0.895756, -30.9509 )
mesh = SubResource( 6 )
material/0 = SubResource( 12 )

[node name="Area" type="Area" parent="Hide_Seek"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0379157, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Hide_Seek/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0662537, 1.77515e-08, 0 )
shape = SubResource( 8 )

[node name="TextureRect" type="TextureRect" parent="Hide_Seek"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Hide_Seek/TextureRect"]
visible = false
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 9 )
text = "Start Hide and Seek"
script = ExtResource( 3 )

[connection signal="mouse_entered" from="Maze_Game/Area" to="." method="_on_Area_mouse_entered_Game1"]
[connection signal="mouse_entered" from="Maze_Game/Area" to="Maze_Game/TextureRect" method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Maze_Game/Area" to="." method="_on_Area_mouse_exited_Game1"]
[connection signal="mouse_exited" from="Maze_Game/Area" to="Maze_Game/TextureRect" method="_on_Area_mouse_exited"]
[connection signal="mouse_entered" from="Race/Area" to="." method="_on_Area_mouse_entered_Game2"]
[connection signal="mouse_entered" from="Race/Area" to="Race/TextureRect" method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Race/Area" to="." method="_on_Area_mouse_exited_Game2"]
[connection signal="mouse_exited" from="Race/Area" to="Race/TextureRect" method="_on_Area_mouse_exited"]
[connection signal="mouse_entered" from="FinalGame/Area" to="." method="_on_Area_mouse_entered_Game4"]
[connection signal="mouse_entered" from="FinalGame/Area" to="FinalGame/TextureRect" method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="FinalGame/Area" to="." method="_on_Area_mouse_exitedGame4"]
[connection signal="mouse_exited" from="FinalGame/Area" to="FinalGame/TextureRect" method="_on_Area_mouse_exited"]
[connection signal="mouse_entered" from="Hide_Seek/Area" to="." method="_on_Area_mouse_entered_Game3"]
[connection signal="mouse_entered" from="Hide_Seek/Area" to="Hide_Seek/TextureRect" method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Hide_Seek/Area" to="." method="_on_Area_mouse_exited_Game3"]
[connection signal="mouse_exited" from="Hide_Seek/Area" to="Hide_Seek/TextureRect" method="_on_Area_mouse_exited"]
